<resources>
    <string name="app_name">Portfolio App</string>
    <string name="action_settings">Settings</string>
    <string name="appTitle">My Nanodegree Apps!</string>
    <string name="BtnAppSpotify">Spotify Streamer</string>
    <string name="btnAppSuperDuo">Super Duo</string>
    <string name="btnAppBuildIt">Build It Bigger</string>
    <string name="btnAppXYZ">XYZ Reader</string>
    <string name="btnAppCaps">Capstone: My Own App</string>
</resources>
